# bsdiff-rs

./: .gitmodules  Cargo.toml  README.md  build.rs  test_setup.sh
benches/: backend.rs
src/: bsdiff_40.rs  bsdiff_43.rs  lib.rs  test.rs  test_backend.rs
src/c/: bsdiff.rs  bspatch.rs  mod.rs
src/rust/: bsdiff.rs  bspatch.rs  mod.rs
tests/: backend_test.rs  bsdiff43_patch_1  bsdiff43_patch_2  bsdiff_43_test.rs  dummy_new_1  dummy_new_2  dummy_old_1  dummy_old_2  integration_test.rs  tests.rs
