[package]
name = "bsdiff-rs"
version = "0.1.0"
authors = ["robot_rover <sam.obrien00@gmail.com>"]
edition = "2018"
build = "build.rs"

[features]
c_backend = []
integration_test = []

[dependencies]
libc = "0.2.0"
byteorder = "1.3.2"
bzip2 = "0.3.3"

[build-dependencies]
cc = "1.0.40"

[dev-dependencies]
rand = "0.7.0"
rand_pcg = "0.2.0"
lazy_static = "1.4.0"
criterion = "0.3.0"
tempdir = "0.3.7"

[[bench]]
name = "backend"
harness = false